tests/pact/bad/bad-cap-use-import.repl
; Capabilities should ot be accessible via FQN across modules
(begin-tx)
(module m A

  (defcap A () true)

  )
(commit-tx)

(module n B
  (use m)
  (defcap B () A)
)
